@@ -1,7 +1,7 @@
 OpenVPN
 Copyright (C) 2002-2003 James Yonan <jim@yonan.net>
 
-$Id: ChangeLog,v 1.70 2003/04/26 03:54:40 jimyonan Exp $
+$Id: ChangeLog,v 1.71 2003/04/28 05:17:22 jimyonan Exp $
 
 Upcoming version 1.4.0
 
@@ -68,6 +68,9 @@ Upcoming version 1.4.0
 * Added a workaround in configure.ac for
   default SSL header location on Linux
   to fix RH9 build problem.
+* Fixed potential deadlock when pthread support
+  is used on OSes that allocate a small socketpair()
+  message buffer.
 
 2002.10.23 -- Version 1.3.2
 
